{
    "version": 1,
    "name": "GameInput",
    "maps": [
        {
            "name": "GamePlay",
            "id": "30a5c0f5-5269-4afa-bbaf-20a376e1656f",
            "actions": [
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "97954564-d5eb-4057-929a-9e1d50799433",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "3a86770c-2a89-4f1a-80cc-06986bb12755",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "1d2f9a1f-ccba-4c46-967f-4f7fe2461085",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BackToMenu",
                    "type": "Button",
                    "id": "de46da1e-15f7-4bf5-bfab-dab786ec2775",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OffsetDown",
                    "type": "Button",
                    "id": "8e90dc58-8f2c-4e82-8830-b119301f53e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OffsetUp",
                    "type": "Button",
                    "id": "fd1af956-496a-427b-ad54-a93465c75ce0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OffsetReset",
                    "type": "Button",
                    "id": "344183b3-0c60-4538-99be-7a44238d231e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f42e1a68-b370-40d8-b2bf-b21954926322",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0bc9afd-12ee-4cf8-8946-3d1d701eef8b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb0d22b-f644-4864-ac1b-301bf8a977bc",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4ed6210-85e2-4195-bf89-27eafef0cb82",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BackToMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0064749d-e8a5-4368-89f9-ae61a99e440f",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OffsetDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c073bed8-1276-4efa-9d0a-f93b7cf09f69",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OffsetUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7709833-7b21-4677-af88-98bef9b76746",
                    "path": "<Keyboard>/backslash",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OffsetReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}